envoy/envoy.yaml
static_resources:

  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000

      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager

                stat_prefix: ingress_http

                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog

                route_config:
                  name: local_route

                  virtual_hosts:
                    - name: backend
                      domains: ["*"]

                      routes:

                        - match:
                            prefix: "/weather"
                          route:
                            cluster: weather_service
                            prefix_rewrite: "/"

                        - match:
                            prefix: "/github"
                          route:
                            cluster: github_service
                            prefix_rewrite: "/"

                http_filters:

                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua

                      inline_code: |
                        function envoy_on_request(request_handle)

                          local body = request_handle:body():getBytes(
                            0,
                            request_handle:body():length()
                          )

                          request_handle:logInfo(body)

                        end

                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:

    - name: weather_service
      connect_timeout: 5s
      type: LOGICAL_DNS

      load_assignment:
        cluster_name: weather_service

        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: weather
                      port_value: 8081

    - name: github_service
      connect_timeout: 5s
      type: LOGICAL_DNS

      load_assignment:
        cluster_name: github_service

        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: github
                      port_value: 8082
